...
import androidx.compose.ui.unit.dp
import com.example.pokedexapp.R
import com.example.pokedexapp.ui.components.PokemonTopAppBarTestTags.SHOW_RANDOM_POKEMON_NOTIFICATION_BUTTON_TAG
import com.example.pokedexapp.ui.theme.TopBarBlueColor

object PokemonTopAppBarTestTags {
    const val SHOW_RANDOM_POKEMON_NOTIFICATION_BUTTON_TAG =
        "SHOW_RANDOM_POKEMON_NOTIFICATION_BUTTON"
}

@Composable
fun PokemonTopAppBar(
    areActionsEnabled: Boolean,
...
