...
import com.example.pokedexapp.ui.theme.SurfaceColorLight
import com.example.pokedexapp.ui.theme.TopBarBlueColor
import com.example.pokedexapp.ui.utils.REMAINING_LIST_ITEMS_TO_LOAD_MORE
import kotlinx.coroutines.launch

object PokemonListScreenTestTags {
    const val POKEMON_LIST_TAG = "POKEMON_LIST"
    const val POKEMON_LIST_ITEM_TAG = "POKEMON_LIST_ITEM"
    const val POKEMON_LIST_SEARCH_BAR_TEST_TAG = "POKEMON_LIST_SEARCH_BAR"
}

private val SEARCH_BAR_TOP_PADDING = 8.dp
private val SEARCH_BAR_BOTTOM_PADDING = 16.dp

@Composable
...
