...
                    spriteUrl = "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png",
                    primaryType = PokemonTypes.FIRE,
                    secondaryType = PokemonTypes.FLYING,
                ),
                PokemonListItemModel(
                    id = "177",
                    name = "Natu",
                    spriteUrl = "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/177.png",
                    primaryType = PokemonTypes.PSYCHIC,
                    secondaryType = PokemonTypes.FLYING,
                ),
            )

...
